[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Joaquin Dominguez <83036592+j-dominguez9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.20.2"
openai = "^0.26.4"
mysql-connector-python = "^8.0.32"
python-decouple = "^3.7"
streamlit = "^1.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
